# hello

Desktop/hexlet-django/hexlet-django-blog/hexlet_django_blog/: settings.py
Desktop/hexlet-django/hexlet_django_blog/: settings.py  urls.py
Desktop/hexlet-django/hexlet_django_blog/article/: views.py
Desktop/hexlet-django/hexlet_django_blog/article/templates/articles/: index.html
Desktop/hexlet-django/hexlet_django_blog/templates/: about.html  index.html
hello/: pyproject.toml
hello/hello/: pyproject.toml
hello/hello/hello/scripts/: say_hello.py
